--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  jekyll
 
 # Build settings
 theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "dark"
 plugins:
   - jekyll-feed
 
