--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Alain's Tech Blog
-name: Alain's Tech Blog
-description: 
-  This is a blog of someone passionate about technology who wants to share some of the things he knows
-  about Application Development, Integration, Cloud, Big Data and Digital Transformation
+title: Le Blog tech NSI
+name: Le blog tech NSI
+description:
+  Ceci est un blog consacré à l'enseignement du numérique et des sciences informatiques (NSI) en classe de première et terminale.
 baseurl: "" # the subpath of your site, e.g. /blog
-github_username:  alainpham
+github_username:  egouello
 
 # jekyll-paginate configuration
 paginate: 10
@@ -37,7 +36,6 @@ exclude:
 include: ["_pages"]
 permalink: /posts/:title/
 excerpt_separator: <!--more-->
-author: http://www.linkedin.com/in/alainpham
+#author: http://www.linkedin.com/in/alainpham
 
 host: 0.0.0.0
-
